<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="추천 PlayList"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My PlayList"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingBottom="8dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        android:layout_weight="9"
>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vertical_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:thumb="@drawable/custom_thumb"
            android:progressDrawable="@drawable/custom_progress"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="4dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/default_image"
                android:contentDescription="@string/default_image"/>
            <LinearLayout
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="8"
                    android:layout_gravity="center"
                    android:layout_width="268dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/bottom_navigation_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title"/>
                    <TextView
                        android:id="@+id/bottom_navigation_artis_text"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginEnd="16dp"
                    android:layout_weight="3"
                    android:layout_gravity="end|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_bottom_navigation_stop"
                        android:layout_marginEnd="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_stop_24"
                        android:contentDescription="@string/pause" />

                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/btn_bottom_navigation_start_and_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/start_pause"
                        android:contentDescription="@string/start_pause" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>


</LinearLayout>